force-app/main/default/objects/Order_Milestone_Task__c/Order_Milestone_Task__c.object-meta.xml
<CustomObject>
    <label>Order Milestone Task</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Order_Milestone_Task Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Order Milestone Task</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>