force-app/main/default/objects/Order_Milestone_Task__c/fields/ARTL_Assignee__c.field-meta.xml
<CustomField>
    <fullName>ARTL_Assignee__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>ARTL_Assignee</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Order_Milestone_Task</relationshipName>
    <type>Lookup</type>
</CustomField>