force-app/main/default/objects/Order_Milestone_Task__c/fields/ARTL_JeopardyCode__c.field-meta.xml
<CustomField>
    <fullName>ARTL_JeopardyCode__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>ARTL_JeopardyCode</label>
    <length>150</length>
    <type>Text</type>
</CustomField>