force-app/main/default/objects/Order_Milestone_Task__c/fields/ARTL_LSI__c.field-meta.xml
<CustomField>
    <fullName>ARTL_LSI__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>ARTL_LSI</label>
    <length>100</length>
    <type>Text</type>
</CustomField>