force-app/main/default/objects/Order_Milestone_Task__c/fields/ARTL_OrderId__c.field-meta.xml
<CustomField>
    <fullName>ARTL_OrderId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>ARTL_OrderId</label>
    <referenceTo>Order</referenceTo>
    <relationshipLabel>Order Milestone Task</relationshipLabel>
    <relationshipName>Order_Milestone_Task</relationshipName>
    <type>Lookup</type>
</CustomField>