force-app/main/default/objects/Order_Milestone_Task__c/fields/ARTL_TaskCreationtime__c.field-meta.xml
<CustomField>
    <fullName>ARTL_TaskCreationtime__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>ARTL_TaskCreationtime</label>
    <type>DateTime</type>
</CustomField>