force-app/main/default/objects/Order_Milestone_Task__c/fields/ARTL_TaskId__c.field-meta.xml
<CustomField>
    <fullName>ARTL_TaskId__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>ARTL_TaskId</label>
    <length>50</length>
    <type>Text</type>
</CustomField>